<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Spotlight</string>
    <string name="appwidget_text" tools:keep="@string/appwidget_text">EXAMPLE</string>
    <string name="add_widget" tools:keep="@string/add_widget">Add widget</string>
    <string name="search_hint" tools:keep="@string/search_hint">Text</string>
    <string name="app_label" tools:keep="@string/app_label">Super</string>
    <string name="permission_desc">Spotlight need access to storage and contacts to search songs, video, files, and contacts.</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="permission_required">Permission Required</string>
    <string name="more">MORE</string>
    <string name="files">Files</string>
    <string name="song">Song</string>
    <string name="contact">Contact</string>
    <string name="apps">Apps</string>
    <string name="videos">Video</string>
    <string name="image_for_call">Image For Call</string>
    <string name="image_for_message">Image For Message</string>
    <string name="menu_3_setting">Three dot menu Setting</string>
    <string name="app_icon">App icon</string>
    <string name="setting">Setting</string>
    <string name="text">TEXT</string>
    <string name="image">IMAGE</string>
    <string name="audio">AUDIO</string>
    <string name="video">VIDEO</string>
    <string name="set_as_assist_app">Set as assist app</string>
    <string name="launch_app">Long click on home button to launch the app</string>
    <string name="search_anywhere">Search anywhere</string>
    <string name="tap_to_launch">Tap or swipe on edge to launch the app</string>
    <string name="settings">Settings</string>
    <string name="folderimage">folderImage</string>
    <string name="shareImage">shareImage</string>
    <string name="propImage">propImage</string>
    <string name="open_folder">Open Folder</string>
    <string name="share">Share</string>
    <string name="properties">Properties</string>
    <string name="display_name">Display Name</string>
    <string name="location">Location</string>
    <string name="last_modified">Last Modified</string>
    <string name="size">Size</string>
    <string name="app_info">App info</string>
    <string name="play_store_page">Play Store page</string>
    <string name="uninstall">Uninstall</string>
    <string name="access">Access</string>
    <string name="channel_name">My Background Service</string>
    <string name="channel_description">Foreground Service</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="customization">Customization</string>
    <string name="search_bar_position">Search Bar Position</string>
    <string name="hello">Hello</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="email">Email</string>
    <string name="send_email">Send email</string>
    <string name="email_message">The dev is busy man. He will probably reply within three or four days.</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="version_code">Version_Code</string>
    <string name="faq">FAQ</string>

    <string name="que1">Why Super Search notification is shown?</string>
    <string name="ans1">This notification is shown when overlay is shown above all apps (eg. search anywhere) or a service is running in background.</string>
    <string name="que2">How to hide Super Search notification?</string>
    <string name="ans2">Long click on notification and click on toggle.</string>
    <string name="que3">Cannot open folders.</string>
    <string name="ans3">Opening folder is supported by only few file managers. Solid Explorer and ES File Explorer are most popular file manager which support opening folder.</string>
    <string name="esExplorer">com.estrongs.android.pop</string>
    <string name="solidExplorer">pl.solidexplorer2</string>



</resources>
