<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/que1"
        android:textColor="@color/propDialogColor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ans1"
        android:layout_marginBottom="32dp"
        android:textColor="@color/secondaryTextColor"
        android:textSize="16sp"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/que2"
        android:textColor="@color/propDialogColor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ans2"
        android:layout_marginBottom="32dp"

        android:textColor="@color/secondaryTextColor"
        android:textSize="16sp"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/que3"
        android:textColor="@color/propDialogColor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/spanClickText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ans3"
        android:layout_marginBottom="32dp"
        android:textColor="@color/secondaryTextColor"
        android:textSize="16sp"
        />

</LinearLayout>