<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/folderMenu"
        android:title="@string/app_info"
        android:icon="@drawable/ic_info_black_24dp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        />
    <item android:id="@+id/shareMenu"
        android:title="@string/play_store_page"
        android:icon="@drawable/ic_icon_google_play"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        />

    <item android:id="@+id/propMenu"
        android:title="@string/uninstall"
        android:layout_height="match_parent"
        android:icon="@drawable/ic_delete_black_24dp"
        android:layout_width="match_parent"
        />
</menu>