<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:src="@drawable/ic_action_file"
            app:civ_circle_background_color="@color/phoneColor"
            android:layout_height="40dp" />

        <TextView
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif"
            android:id="@+id/dialogTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_image_action"
            app:civ_circle_background_color="@color/imageColor"/>


        <TextView
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif"
            android:id="@+id/dialogImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image" />


    </LinearLayout>


    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_action_song"
            app:civ_circle_background_color="@color/audioColor"/>

        <TextView
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif"
            android:id="@+id/dialogAudioView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audio" />


    </LinearLayout>


    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_action_movie"
            app:civ_circle_background_color="@color/movieColor"/>

        <TextView
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif"
            android:id="@+id/dialogVideoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/video" />

    </LinearLayout>


</LinearLayout>