<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:keep="@layout/prop_dialog">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/display_name"
        android:textColor="@color/propDialogColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/displayNameTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:textAlignment="viewStart"

        android:textColor="@color/secondaryTextColor"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextViewEdits"
        tools:text="@string/display_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"

        android:fontFamily="sans-serif"
        android:text="@string/location"
        android:textColor="@color/propDialogColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayNameTv" />


    <TextView
        android:id="@+id/locationNameTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"

        android:fontFamily="sans-serif"
        android:textColor="@color/secondaryTextColor"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/displayNameTv"
        tools:text="location" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"

        android:fontFamily="sans-serif"
        android:text="@string/last_modified"
        android:textColor="@color/propDialogColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationNameTV" />


    <TextView
        android:id="@+id/lastModifiedTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/secondaryTextColor"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/locationNameTV"
        tools:text="modified" />

    <TextView
        android:id="@+id/sizeHelpTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/size"
        android:layout_marginStart="24dp"

        android:textColor="@color/propDialogColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastModifiedTv" />


    <TextView
        android:id="@+id/sizeNameTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/secondaryTextColor"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sizeHelpTv"
        app:layout_constraintTop_toBottomOf="@+id/lastModifiedTv"
        tools:text="sizeName" />


</android.support.constraint.ConstraintLayout>